class StudentListStrategy
  private_class_method :new

  protected

  def string_to_list(str); end

  def list_to_string(list); end

end