@startuml
'https://plantuml.com/class-diagram

class Student {
last_name: String
first_name: String
paternal_name: String
id: Integer
phone: String
git: String
telegram: String
email: String
--
+{static}valid_phone?(String): Boolean
+{static}valid_name?(String): Boolean
+{static}valid_account?(String): Boolean
+{static}valid_email?(String): Boolean
+initialize(Hash)
+{static}pars_str(String)
+shortName():String
+contact():String
+getInfo():String
+validate?(): Bollean
+set_contacts(Hash)
+to_s(): String
--Getters--
+phone():String
+first_name(): String
+last_name(): String
+paternal_name(): String
+git=(): String
+telegram(): String
+email(): String
--Setters--
+phone=(String)
+first_name=(String)
+last_name=(String)
+paternal_name=(String)
+git=(String)
+telegram=(String)
+email=(String)
}

class StudentShort{
id: Integer
git: String
contact: String
initials: String
--
+initialize(Student)
+{static}from_str(id, str)
+to_s():String
--Getters--
+id(): Integer
+git(): String
+contact(): String
+initials(): String
}
class Data_list{
sel_objects:Array
list:Array
--
+initialize(Array)
+select(Integer):Array
+get_selected():Array
+get_data():Array
#get_names()
#table_fields(Object):Array
--Getters--
-sel_objects():Array
+list():Array
--Setters--
-sel_objects=(Array))
+list=(Array)
}

class Data_table{
table:Array
stroka_count:Integer
stolb_count:Integer
--
+initialize(Table)
+get_elem(Integer, Integer):String
--Getters--
-table()
+stroka_count():Integer
+stolb_count():Integer
--Setters--
-table()
-stroka_count=(Integer)
-stolb_count=(Integer)
}

class Data_list_student_short{
--
+initialize(Array)
+get_names():Data_table
#table_fields(Objects):Array
}

class main{
read_from_txt(String):List<Student>
write_to_txt(String, List<Student>):
}
class StudentListBase{
students:Array
this_id:Integer
data_type: file
--
-initialize(file)
+load_from_file(String)
+save_to_file(String)
+student_by_id(Integer):Student
+sort_students():Array
+add_student(student)
+replace_student(Integer, Student)
+delete_student(Integer)
+student_count():Integer
+delete_student(Integer)
+get_k_n_student_short_list(Integer, Integer, DataList: nil):DataList
-new_this_id()
--Getters--
#students():Array
#this_id():Integer
-data_type():file
--Setters--
#students=(Array)
#this_id=(Integer)
+data_type=(file)
}
class StudentListStrategy{

--
#string_to_list(String)
#list_to_string(Array)
}
class StudentListTxt{

--
#string_to_list(String):Array
#list_to_string(Array):String
-to_hash(String):Array
-to_string(Array)
}
class StudentListJson{

--
#string_to_list(String)
#list_to_string(Array)
}
class StudentListYaml{

--
#string_to_list(String)
#list_to_string(Array)
}

class StudentListDBAdapter{
client: SQLite3::Client
--
+initialize()
+into_hash(Array): Hash
+student_by_id(Integer): Student
+get_k_n_student_short_list(Integer, Integer): DataList
+add_student(Student)
+replace_student(Integer, Student)
+delete_student(Integer)
+count_student(): Integer
--Getters--
-students(): SQLite3::Client
--Setters--
-students=(SQLite3::Client)
}
class DBUniversity{
instance_mutex: Mutex
instance: BDUniversity
client: SQLite3::client
--
+{static} instance():DBUniversity
-initialize()
+prepare_exec(String, *Object): SQLite3::Result
+query(String): SQLite3::Result
}
class StudentFileAdapter{
file: StudentListBase
file_path: String
--
+initialize()
+student_by_id(Integer): Student
+add_student(Student)
+delete_student(Integer)
+replace_student(Integer, Student)
+count_student():Integer
+get_k_n_student_short_list(Integer, Integer):DataList
}
class StudentList{
adapter
--
+initialize()
+student_by_id(Integer): Student
+add_student(Student)
+delete_student(Integer)
+replace_student(Integer, Student)
+count_student():Integer
+get_k_n_student_short_list(Integer, Integer):DataList
}
StudentList *-- StudentListDBAdapter
StudentList *-- StudentFileAdapter
StudentFileAdapter o-- StudentListBase
StudentListDBAdapter o-- DBUniversity
StudentShort ^-- Student
Data_list ^-- Data_list_student_short
Data_list_student_short o--StudentShort
Data_list ..>Data_table
StudentListStrategy ^--StudentListYaml
StudentListStrategy ^--StudentListJson
StudentListStrategy ^--StudentListTxt
StudentListStrategy --* StudentListBase
@enduml

